# SipHash

./: .vvignores  CMakeLists.txt  SipHash.sln  build.gradle
SipHash/: CMakeLists.txt  SipHash.vcxproj  SipHash.vcxproj.filters
SipHash/include/: SipHash.h  SipHash.hpp
SipHash/src/: IV.cpp  SipHash.cpp  SipHash_2_4.cpp  SipHash_4_8.cpp  internal.h
TestSipHash/: CMakeLists.txt  TestSipHash.vcxproj
TestSipHash/src/: TestKey.cpp  TestSipHash.cpp  common.h  main.cpp
src/: CMakeLists.txt  IV.cpp  SipHash.cpp  SipHash_2_4.cpp  SipHash_4_8.cpp  internal.h
test/: CMakeLists.txt  TestKey.cpp  TestSipHash.cpp  TestSipHash.h  precomp.cpp
